--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.15.2",
     "babel-core": "^6.18.2",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.17.2",
     "co-express": "^1.2.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
@@ -31,15 +33,18 @@
     "koa-request": "^1.0.0",
     "lodash": "^4.16.6",
     "material-ui": "^0.16.1",
+    "mongodb": "^2.2.31",
     "path": "^0.12.7",
     "pg": "^6.1.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.8",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "thunkify-mongodb": "^0.2.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
